# PlexOnTauri

./: package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json
