[package]
name = "plexontauri"
version = "0.1.0"
description = "Plex Web Client in a Native Desktop Application"
authors = ["Snazzie"]
edition = "2021"

[lib]
name = "plexontauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-window-state = "2.2.2"
once_cell = "1.21.3"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-window-state = "2.2.2"
